// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notebook accepts an Immutable.List of cells 1`] = `
<Notebook
  displayOrder={
    Array [
      "application/json",
      "application/javascript",
      "text/html",
      "text/markdown",
      "text/latex",
      "image/svg+xml",
      "image/gif",
      "image/png",
      "image/jpeg",
      "text/plain",
    ]
  }
  notebook={
    Immutable.Map {
      cellOrder: Immutable.List [
        4,
        5,
      ],
      cellMap: Immutable.Map {
        4: Immutable.Map {
          cell_type: "markdown",
          source: "## The Notable Nteract Notebook
          
          **It's a notebook!**
          ",
          metadata: Immutable.Map {
          },
        },
        5: Immutable.Map {
          cell_type: "code",
          source: "import IPython
          
          from IPython.display import HTML
          from IPython.display import Markdown
          from IPython.display import display
          
          display(HTML('<h1>Multiple</h1>'))
          display(HTML('<p>Display Elements</p>'))
          display(Markdown('**awesome**'))
          
          print('hey')
          42",
          outputs: Immutable.List [
            Immutable.Map {
              output_type: "display_data",
              data: Immutable.Map {
                text/plain: "<IPython.core.display.HTML object>",
              },
              metadata: Immutable.Map {
              },
            },
          ],
          execution_count: 11,
          metadata: Immutable.Map {
            collapsed: false,
          },
        },
      },
      nbformat_minor: 0,
      nbformat: 4,
      metadata: Immutable.Map {
        kernelspec: Immutable.Map {
          display_name: "Python 3",
          language: "python",
          name: "python3",
        },
        language_info: Immutable.Map {
          codemirror_mode: Immutable.Map {
            name: "ipython",
            version: 3,
          },
          file_extension: ".py",
          mimetype: "text/x-python",
          name: "python",
          nbconvert_exporter: "python",
          pygments_lexer: "ipython3",
          version: "3.5.1",
        },
      },
    }
  }
  theme="light"
  transforms={
    Object {
      "application/javascript": [Function],
      "application/json": [Function],
      "image/gif": [Function],
      "image/jpeg": [Function],
      "image/png": [Function],
      "image/svg+xml": [Function],
      "text/html": [Function],
      "text/latex": [Function],
      "text/markdown": [Function],
      "text/plain": [Function],
    }
  }
/>
`;

exports[`Notebook accepts an Object of cells 1`] = `
<Notebook
  displayOrder={
    Array [
      "application/json",
      "application/javascript",
      "text/html",
      "text/markdown",
      "text/latex",
      "image/svg+xml",
      "image/gif",
      "image/png",
      "image/jpeg",
      "text/plain",
    ]
  }
  notebook={
    Immutable.Map {
      cellOrder: Immutable.List [
        6,
        7,
      ],
      cellMap: Immutable.Map {
        6: Immutable.Map {
          cell_type: "markdown",
          source: "## The Notable Nteract Notebook
          
          **It's a notebook!**
          ",
          metadata: Immutable.Map {
          },
        },
        7: Immutable.Map {
          cell_type: "code",
          source: "import IPython
          
          from IPython.display import HTML
          from IPython.display import Markdown
          from IPython.display import display
          
          display(HTML('<h1>Multiple</h1>'))
          display(HTML('<p>Display Elements</p>'))
          display(Markdown('**awesome**'))
          
          print('hey')
          42",
          outputs: Immutable.List [
            Immutable.Map {
              output_type: "display_data",
              data: Immutable.Map {
                text/plain: "<IPython.core.display.HTML object>",
              },
              metadata: Immutable.Map {
              },
            },
          ],
          execution_count: 11,
          metadata: Immutable.Map {
            collapsed: false,
          },
        },
      },
      nbformat_minor: 0,
      nbformat: 4,
      metadata: Immutable.Map {
        kernelspec: Immutable.Map {
          display_name: "Python 3",
          language: "python",
          name: "python3",
        },
        language_info: Immutable.Map {
          codemirror_mode: Immutable.Map {
            name: "ipython",
            version: 3,
          },
          file_extension: ".py",
          mimetype: "text/x-python",
          name: "python",
          nbconvert_exporter: "python",
          pygments_lexer: "ipython3",
          version: "3.5.1",
        },
      },
    }
  }
  theme="light"
  transforms={
    Object {
      "application/javascript": [Function],
      "application/json": [Function],
      "image/gif": [Function],
      "image/jpeg": [Function],
      "image/png": [Function],
      "image/svg+xml": [Function],
      "text/html": [Function],
      "text/latex": [Function],
      "text/markdown": [Function],
      "text/plain": [Function],
    }
  }
/>
`;
